Add growchief-network to temporal service
Signed-off-by: Q <quinten.saathoff@quontumm.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,6 +106,7 @@ services:
       - TEMPORAL_NAMESPACE=default
     networks:
       - temporal-network
+      - growchief-network
     expose:
       - 7233
 
